# cumaweb

./: .gitignore  .pre-commit-config.yaml  IMPROVEMENTS.md  Makefile  README.md  environment.yaml  pyproject.toml
.github/workflows/: django.yml
old_v1/: cuma_de_la_plaine.sql  deconnexion.php  enregistrer_heures.php  enregistrer_utilisateur.php  export_excel.php  inscription.html  liste_materiels.php  login.html  login.php  responsable_materiel.php  saisir_heures.php  style.css
src/: manage.py
src/catalog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/catalog/templates/catalog/: createtoolform.html  index.html  tool.html  tool_access_confirm_delete.html  tool_access_form.html  tool_access_list.html  tooldetail.html  toolform.html
src/catalog/templatetags/: form_tags.py
src/cumaweb/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/cumaweb/templates/: base.html
src/cumaweb/templates/cumaweb/: index.html
src/users/: apps.py  forms.py  tests.py  urls.py  views.py
src/users/templates/users/: createUser.html  login.html  user_confirm_delete.html  user_list.html
