[tool.black]
line-length = 119

[tool.ruff]
# Never enforce `E501` (line length violations).
lint.ignore = ["C901", "E501", "E741", "W605", "E402"]
lint.select = ["C", "E", "F", "I", "W"]
line-length = 119

[tool.ruff.isort]
lines-after-imports = 2

[tool.poetry]
name = "cumaweb"
version = "0.0.0"
description = "Application web pour la gestion de CUMA"
authors = ["Bachelet Antoine, Dupont Florian, Grimal Paul"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pre-commit = "^3.6.0"
ruff = "^0.2.0"
black = "^24.1.1"
rich = "^13.7.0"
djlint = "^1.34.1"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
